--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 astroid==2.3.2
+dj-static==0.0.6
 Django==2.2.6
+gunicorn==19.9.0
 isort==4.3.21
 lazy-object-proxy==1.4.3
 Markdown==3.1.1
@@ -8,5 +10,6 @@ pylint==2.4.3
 pytz==2019.3
 six==1.12.0
 sqlparse==0.3.0
+static3==0.7.0
 typed-ast==1.4.0
 wrapt==1.11.2
