--- a/website.conf
+++ b/website.conf
@@ -1,6 +1,10 @@
 server {
-    listen 80;
+    listen 443 ssl;
     server_name 100daysofk8s.io;
+    ssl_certificate     domain-crt.crt;
+    ssl_certificate_key domain-key.key;
+    ssl_protocols       TLSv1 TLSv1.1 TLSv1.2;
+    ssl_ciphers         HIGH:!aNULL:!MD5;
     location = /favicon.ico { access_log off; log_not_found off; }    
     location /static/ {
         root /hundred_days_of_k8s;
