--- a/website.conf
+++ b/website.conf
@@ -1,8 +1,8 @@
 server {
     listen 443 ssl;
     server_name 100daysofk8s.io;
-    ssl_certificate     domain-crt.crt;
-    ssl_certificate_key domain-key.key;
+    ssl_certificate     100daysofk8s.crt;
+    ssl_certificate_key 100daysofk8s.key;
     ssl_protocols       TLSv1 TLSv1.1 TLSv1.2;
     ssl_ciphers         HIGH:!aNULL:!MD5;
     location = /favicon.ico { access_log off; log_not_found off; }    
