--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,6 +32,11 @@ jobs:
           name: Deploy Over SSH
           command: |
             ssh $ec2username@$ec2host "cd $ec2path && git pull origin master"
+            docker stop $(docker ps -a -q)
+            sudo docker build -t server:1.02 ./hundred_days_of_k8s/
+            docker rmi $(docker images -f "dangling=true" -q)
+            docker run -d --rm -p=443:443 server:1.02
+
 workflows:
   version: 2
   build-and-deploy:
