--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,5 @@ __pycache__
 .gitignore
 .circleci/old-config.yml
 .gitignore
-certificates/domain-crt.crt
-certificates/domain-key.key
-certificates/100daysofk8s.crt
-certificates/100daysofk8s.key
-certificates/certificate.crt
+certificates/
 .gitignore
