--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,9 +33,9 @@ jobs:
           command: |
             ssh $ec2username@$ec2host sh -c '
             cd $ec2path && git pull origin master
-            docker stop $allContainers
+            docker stop \$(docker ps -a -q)
             docker build -t server:1.02 ./hundred_days_of_k8s/
-            docker rmi $allDanglingImages
+            docker rmi \$(docker images -f "dangling=true" -q)
             docker run -d --rm -p=443:443 server:1.02'
 
 workflows:
