--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,9 +31,9 @@ jobs:
       - run:
           name: Deploy Over SSH
           command: |
-            ssh $ec2username@$ec2host echo $ec2path && git pull origin master && sh -c "
+            ssh $ec2username@$ec2host "cd $ec2path && git pull origin master && sh -c'
             docker build -t server:1.02 ./hundred_days_of_k8s/
-            docker run -d --rm -p=443:443 server:1.02"
+            docker run -d --rm -p=443:443 server:1.02'"
 workflows:
   version: 2
   build-and-deploy:
