--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,7 +32,8 @@ jobs:
           name: Deploy Over SSH
           command: |
             ssh $ec2username@$ec2host "cd $ec2path && git pull origin master && sh -c '
-            docker build -t server:1.02 ./hundred_days_of_k8s/
+            docker build -t server:1.02 .
+            docker rm $(docker ps -a -q)
             docker run -d --rm -p=443:443 server:1.02'"
 workflows:
   version: 2
