--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,8 +31,9 @@ jobs:
       - run:
           name: Deploy Over SSH
           command: |
-            ssh $ec2username@$ec2host "cd $ec2path && git pull origin master && sh -c '
-            docker stop $allContainers
+            ssh $ec2username@$ec2host "sh -c '
+            cd $ec2path && git pull origin master
+            docker stop  -t 1 $allContainers
             docker build -t server:1.02 .
             docker rmi $allDanglingImages
             docker run -d --rm -p=443:443 server:1.02'"
